I think, this is a final commit where i fixing imports

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
-packages = find: 
+packages = pygame_entities, pygame_entities.utils, pygame_entities.entities
 install_requires =
     pygame >=2.1.2
 python_requires = >=3.7
